unpackaged/main/default/objects/Project_Consultant__c/Project_Consultant__c.object-meta.xml
<CustomObject>
    <description>Consultants on a project</description>
    <label>obsolete Project Consultant</label>
    <nameField>
        <displayFormat>PC-{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Consultants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>